fix: fixed logic behind storing most recent image

--- a/Photobase-Desktop/public/main.css
+++ b/Photobase-Desktop/public/main.css
@@ -10,7 +10,7 @@
 }
 
 body { 
-  background-color: Black; 
+  background-color:  #121212; 
   color: Black;
   height: 100%;
   margin: 0;
